# notif-server

./: .env  .gitignore  Cargo.toml  Specifications.txt  firebase_config.py  ljkadsljkasdlkj.txt  manage.py  requirements.txt
config/: firebase_config.json  log4rs.yaml
notif_server/: asgi.py  settings.py  urls.py  wsgi.py
server/: admin.py  apps.py  views.py
src/: controller.rs  main.rs  model.rs  websocket.rs
static/: dashboard.html  index.html
templates/: dashboard.html  index.html
