[package]
name = "notif-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
actix = "0.13.5"
actix-web-actors = "4.3.1"
actix-files = "0.6.6"
serde = { version = "1.0.210", features = ["derive"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
firebase-auth = "0.4.3"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

