[package]
name = "firebase-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
firebase-auth-sdk = "0.1.0"
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.128"
dotenv = "0.15.0"
tower-http = { version = "0.1", features = ["fs"] }
actix-web = "4.9.0"
actix-files = "0.6.6"
env_logger = "0.11.5"
log4rs = "1.3.0"
log = "0.4.22"
